--- a/config/boards/arm/cyber60_rev_d/cyber60_rev_d_defconfig
+++ b/config/boards/arm/cyber60_rev_d/cyber60_rev_d_defconfig
@@ -33,8 +33,6 @@ CONFIG_WS2812_STRIP=y
 CONFIG_ZMK_RGB_UNDERGLOW_EXT_POWER=y
 CONFIG_ZMK_RGB_UNDERGLOW_ON_START=n
 
-CONFIG_PINCTRL=y
-
 # Enable the rotary encoder
 CONFIG_EC11=y
 CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
@@ -42,3 +40,10 @@ CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
 # Enable sleep
 CONFIG_ZMK_SLEEP=n
 # CONFIG_ZMK_IDLE_SLEEP_TIMEOUT=120000
+
+# enable pinctrl
+CONFIG_PINCTRL=y
+
+# Turn on logging, and set ZMK logging to debug output
+# CONFIG_LOG_PROCESS_THREAD_STARTUP_DELAY_MS=8000
+# CONFIG_ZMK_USB_LOGGING=y
